appId: ${APP_ID}
---
- launchApp
- runFlow: ../utils/onboarding-and-login.yaml
- assertVisible: 'Character'
- assertVisible:
    id: 'character-tab'
- tapOn:
    id: 'character-tab'
- assertVisible: 'Character'
- tapOn:
    id: 'scenarios-tab'
- assertVisible: 'Scenarios'
- tapOn:
    id: 'settings-tab'
- assertVisible: 'Settings'
