appId: ${APP_ID}
tags:
  - util
---
- assertVisible: 'DungeonWalk: Fitness RPG'
- assertVisible: "Let's Get Started"
- tapOn: "Let's Get Started"
- assertVisible: 'Grant this App access to Health data'
