appId: ${APP_ID}
---
- launchApp
- runFlow:
    when:
      visible: 'DungeonWalk: Fitness RPG'
    file: ../utils/onboarding.yaml
- assertVisible: 'Grant this App access to Health data'
- tapOn: 'Grant this App access to Health data'
- assertVisible: 'Character'
